@@ -5,6 +5,7 @@ Changes for 0.11.0:
 * Fixed issue #78: Get current date and time in microseconds resolution.
 * Fixed issue #81: Support for ARM macOS.
 * Fixed issue #83: Fail the build when unit tests are failing but run all remaining workflow steps anyway.
+* Fixed issue #87: TestTiming.testGetMicrosecondsTimerAgaintsSleep() fails on macOS with more than 150ms difference.
 
 
 Changes for 0.10.2:
